# HDF5DataManager

./: .gitignore  delete_hdf5_dataset.py  demo_script.py  notes.txt  pyproject.toml  setup.py
playground/: demo_script.py  example.h5
src/Bifrost/: data_manager.py  hdf5_data_manager.py  hdf5_data_manager_v1.py  hdf5_data_manager_v2.py  tests.py
src/Bifrost.egg-info/: PKG-INFO  SOURCES.txt
src/bifrost/: __init__.py  axes_manager.py  datasets_manager.py  h5dm.py  hdf5_data_manager.py  hdf5_manager.py
src/hdf5_data_manager/: h5dm.py
tests/: all_tests.py  test_h5dm.py
